--- a/profiles.yml
+++ b/profiles.yml
@@ -1,13 +1,15 @@
-dbsales_kp2p:
- target: dev
+datawarehouse:
   outputs:
     dev:
+      dbname: '{{ env_var(''DB_NAME_PROD'') }}'
+      host: '{{ env_var(''DB_HOST_PROD'') }}'
+      pass: '{{ env_var(''DB_PASS_PROD'') }}'
+      port: '{{ env_var(''DB_PORT_PROD'') | int }}'
+      schema: '{{ env_var(''DB_SCHEMA_PROD'') }}'
+      threads: '{{ env_var(''DB_THREADS_PROD'') | int }}'
       type: postgres
-      host: "{{ env_var('DB_HOST_PROD') }}"
-      user: "{{ env_var('DB_USER_PROD') }}"
-      password: "{{ env_var('DB_PASS_PROD') }}"
-      port: "{{ env_var('DB_PORT_PROD') | int }}"
-      dbname: "{{ env_var('DB_NAME_PROD') }}"
-      schema: "{{ env_var('DB_SCHEMA_PROD') }}"
-      threads: "{{ env_var('DB_THREADS_PROD') | int }}"
-      keepalives_idle: 0
+      user: '{{ env_var(''DB_USER_PROD'') }}'
+  target: dev
+
+
+
